// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> Checkbox render colors color "primary" 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: var(--pv-size-base-4);
  height: var(--pv-size-base-4);
  position: relative;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-1 {
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  outline: 0;
  border-radius: 4px;
  border-width: 2px;
  border-style: solid;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  border-color: currentColor;
  background-color: transparent;
  color: var(--pv-color-gray-9);
}

.emotion-1:before {
  top: -7px;
  left: -7px;
  right: -7px;
  bottom: -7px;
  content: "";
  position: absolute;
  border-radius: 50%;
  opacity: 0;
  background-color: currentColor;
  -webkit-transition: opacity 200ms;
  transition: opacity 200ms;
}

.emotion-1:checked+[aria-hidden],
.emotion-1[data-indeterminate="true"]+[aria-hidden] {
  opacity: 1;
}

.emotion-1:not(:disabled) {
  cursor: pointer;
}

.emotion-1:not(:disabled):checked,
.emotion-1:not(:disabled)[data-indeterminate="true"] {
  color: var(--pv-color-primary-shade-1);
  background-color: var(--pv-color-primary);
}

.emotion-1:not(:disabled):checked+[aria-hidden],
.emotion-1:not(:disabled)[data-indeterminate="true"]+[aria-hidden] {
  color: var(--pv-color-white);
}

.emotion-1:not(:disabled):hover:before {
  opacity: 0.18;
}

.emotion-1:not(:disabled):focus-visible:before {
  opacity: 0.23;
}

.emotion-1:not(:disabled):active:before {
  opacity: 0.3;
}

.emotion-1:disabled {
  cursor: not-allowed;
  color: var(--pv-color-gray-6);
}

.emotion-1:disabled:checked,
.emotion-1:disabled[data-indeterminate="true"] {
  color: var(--pv-color-gray-7);
  background-color: var(--pv-color-gray-6);
}

.emotion-1:disabled:checked+[aria-hidden],
.emotion-1:disabled[data-indeterminate="true"]+[aria-hidden] {
  color: var(--pv-color-white);
}

.emotion-2 {
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  pointer-events: none;
}

<label
    class="emotion-0"
    for="test-id"
  >
    <input
      class="emotion-1"
      data-indeterminate="false"
      id="test-id"
      type="checkbox"
    />
    <svg
      aria-hidden="true"
      class="emotion-2"
      fill="none"
      height="20px"
      viewBox="0 0 20 20"
      width="20px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m5 11 3 3 8-8"
        stroke="currentColor"
        stroke-width="1.5"
      />
    </svg>
  </label>
</DocumentFragment>
`;

exports[`<Checkbox /> Checkbox render colors color "secondary" 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: var(--pv-size-base-4);
  height: var(--pv-size-base-4);
  position: relative;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-1 {
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  outline: 0;
  border-radius: 4px;
  border-width: 2px;
  border-style: solid;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  border-color: currentColor;
  background-color: transparent;
  color: var(--pv-color-gray-9);
}

.emotion-1:before {
  top: -7px;
  left: -7px;
  right: -7px;
  bottom: -7px;
  content: "";
  position: absolute;
  border-radius: 50%;
  opacity: 0;
  background-color: currentColor;
  -webkit-transition: opacity 200ms;
  transition: opacity 200ms;
}

.emotion-1:checked+[aria-hidden],
.emotion-1[data-indeterminate="true"]+[aria-hidden] {
  opacity: 1;
}

.emotion-1:not(:disabled) {
  cursor: pointer;
}

.emotion-1:not(:disabled):checked,
.emotion-1:not(:disabled)[data-indeterminate="true"] {
  color: var(--pv-color-secondary-shade-1);
  background-color: var(--pv-color-secondary);
}

.emotion-1:not(:disabled):checked+[aria-hidden],
.emotion-1:not(:disabled)[data-indeterminate="true"]+[aria-hidden] {
  color: var(--pv-color-white);
}

.emotion-1:not(:disabled):hover:before {
  opacity: 0.18;
}

.emotion-1:not(:disabled):focus-visible:before {
  opacity: 0.23;
}

.emotion-1:not(:disabled):active:before {
  opacity: 0.3;
}

.emotion-1:disabled {
  cursor: not-allowed;
  color: var(--pv-color-gray-6);
}

.emotion-1:disabled:checked,
.emotion-1:disabled[data-indeterminate="true"] {
  color: var(--pv-color-gray-7);
  background-color: var(--pv-color-gray-6);
}

.emotion-1:disabled:checked+[aria-hidden],
.emotion-1:disabled[data-indeterminate="true"]+[aria-hidden] {
  color: var(--pv-color-white);
}

.emotion-2 {
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  pointer-events: none;
}

<label
    class="emotion-0"
    for="test-id"
  >
    <input
      class="emotion-1"
      data-indeterminate="false"
      id="test-id"
      type="checkbox"
    />
    <svg
      aria-hidden="true"
      class="emotion-2"
      fill="none"
      height="20px"
      viewBox="0 0 20 20"
      width="20px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m5 11 3 3 8-8"
        stroke="currentColor"
        stroke-width="1.5"
      />
    </svg>
  </label>
</DocumentFragment>
`;

exports[`<Checkbox /> Checkbox render variants should be checked 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: var(--pv-size-base-4);
  height: var(--pv-size-base-4);
  position: relative;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-1 {
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  outline: 0;
  border-radius: 4px;
  border-width: 2px;
  border-style: solid;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  border-color: currentColor;
  background-color: transparent;
  color: var(--pv-color-gray-9);
}

.emotion-1:before {
  top: -7px;
  left: -7px;
  right: -7px;
  bottom: -7px;
  content: "";
  position: absolute;
  border-radius: 50%;
  opacity: 0;
  background-color: currentColor;
  -webkit-transition: opacity 200ms;
  transition: opacity 200ms;
}

.emotion-1:checked+[aria-hidden],
.emotion-1[data-indeterminate="true"]+[aria-hidden] {
  opacity: 1;
}

.emotion-1:not(:disabled) {
  cursor: pointer;
}

.emotion-1:not(:disabled):checked,
.emotion-1:not(:disabled)[data-indeterminate="true"] {
  color: var(--pv-color-primary-shade-1);
  background-color: var(--pv-color-primary);
}

.emotion-1:not(:disabled):checked+[aria-hidden],
.emotion-1:not(:disabled)[data-indeterminate="true"]+[aria-hidden] {
  color: var(--pv-color-white);
}

.emotion-1:not(:disabled):hover:before {
  opacity: 0.18;
}

.emotion-1:not(:disabled):focus-visible:before {
  opacity: 0.23;
}

.emotion-1:not(:disabled):active:before {
  opacity: 0.3;
}

.emotion-1:disabled {
  cursor: not-allowed;
  color: var(--pv-color-gray-6);
}

.emotion-1:disabled:checked,
.emotion-1:disabled[data-indeterminate="true"] {
  color: var(--pv-color-gray-7);
  background-color: var(--pv-color-gray-6);
}

.emotion-1:disabled:checked+[aria-hidden],
.emotion-1:disabled[data-indeterminate="true"]+[aria-hidden] {
  color: var(--pv-color-white);
}

.emotion-2 {
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  pointer-events: none;
}

<label
    class="emotion-0"
    for="test-id"
  >
    <input
      checked=""
      class="emotion-1"
      data-indeterminate="false"
      id="test-id"
      type="checkbox"
    />
    <svg
      aria-hidden="true"
      class="emotion-2"
      fill="none"
      height="20px"
      viewBox="0 0 20 20"
      width="20px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m5 11 3 3 8-8"
        stroke="currentColor"
        stroke-width="1.5"
      />
    </svg>
  </label>
</DocumentFragment>
`;

exports[`<Checkbox /> Checkbox render variants should be checked, defaultChecked prop 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: var(--pv-size-base-4);
  height: var(--pv-size-base-4);
  position: relative;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-1 {
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  outline: 0;
  border-radius: 4px;
  border-width: 2px;
  border-style: solid;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  border-color: currentColor;
  background-color: transparent;
  color: var(--pv-color-gray-9);
}

.emotion-1:before {
  top: -7px;
  left: -7px;
  right: -7px;
  bottom: -7px;
  content: "";
  position: absolute;
  border-radius: 50%;
  opacity: 0;
  background-color: currentColor;
  -webkit-transition: opacity 200ms;
  transition: opacity 200ms;
}

.emotion-1:checked+[aria-hidden],
.emotion-1[data-indeterminate="true"]+[aria-hidden] {
  opacity: 1;
}

.emotion-1:not(:disabled) {
  cursor: pointer;
}

.emotion-1:not(:disabled):checked,
.emotion-1:not(:disabled)[data-indeterminate="true"] {
  color: var(--pv-color-primary-shade-1);
  background-color: var(--pv-color-primary);
}

.emotion-1:not(:disabled):checked+[aria-hidden],
.emotion-1:not(:disabled)[data-indeterminate="true"]+[aria-hidden] {
  color: var(--pv-color-white);
}

.emotion-1:not(:disabled):hover:before {
  opacity: 0.18;
}

.emotion-1:not(:disabled):focus-visible:before {
  opacity: 0.23;
}

.emotion-1:not(:disabled):active:before {
  opacity: 0.3;
}

.emotion-1:disabled {
  cursor: not-allowed;
  color: var(--pv-color-gray-6);
}

.emotion-1:disabled:checked,
.emotion-1:disabled[data-indeterminate="true"] {
  color: var(--pv-color-gray-7);
  background-color: var(--pv-color-gray-6);
}

.emotion-1:disabled:checked+[aria-hidden],
.emotion-1:disabled[data-indeterminate="true"]+[aria-hidden] {
  color: var(--pv-color-white);
}

.emotion-2 {
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  pointer-events: none;
}

<label
    class="emotion-0"
    for="test-id"
  >
    <input
      checked=""
      class="emotion-1"
      data-indeterminate="false"
      id="test-id"
      type="checkbox"
    />
    <svg
      aria-hidden="true"
      class="emotion-2"
      fill="none"
      height="20px"
      viewBox="0 0 20 20"
      width="20px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m5 11 3 3 8-8"
        stroke="currentColor"
        stroke-width="1.5"
      />
    </svg>
  </label>
</DocumentFragment>
`;

exports[`<Checkbox /> Checkbox render variants should be disabled 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: var(--pv-size-base-4);
  height: var(--pv-size-base-4);
  position: relative;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-1 {
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  outline: 0;
  border-radius: 4px;
  border-width: 2px;
  border-style: solid;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  border-color: currentColor;
  background-color: transparent;
  color: var(--pv-color-gray-9);
}

.emotion-1:before {
  top: -7px;
  left: -7px;
  right: -7px;
  bottom: -7px;
  content: "";
  position: absolute;
  border-radius: 50%;
  opacity: 0;
  background-color: currentColor;
  -webkit-transition: opacity 200ms;
  transition: opacity 200ms;
}

.emotion-1:checked+[aria-hidden],
.emotion-1[data-indeterminate="true"]+[aria-hidden] {
  opacity: 1;
}

.emotion-1:not(:disabled) {
  cursor: pointer;
}

.emotion-1:not(:disabled):checked,
.emotion-1:not(:disabled)[data-indeterminate="true"] {
  color: var(--pv-color-primary-shade-1);
  background-color: var(--pv-color-primary);
}

.emotion-1:not(:disabled):checked+[aria-hidden],
.emotion-1:not(:disabled)[data-indeterminate="true"]+[aria-hidden] {
  color: var(--pv-color-white);
}

.emotion-1:not(:disabled):hover:before {
  opacity: 0.18;
}

.emotion-1:not(:disabled):focus-visible:before {
  opacity: 0.23;
}

.emotion-1:not(:disabled):active:before {
  opacity: 0.3;
}

.emotion-1:disabled {
  cursor: not-allowed;
  color: var(--pv-color-gray-6);
}

.emotion-1:disabled:checked,
.emotion-1:disabled[data-indeterminate="true"] {
  color: var(--pv-color-gray-7);
  background-color: var(--pv-color-gray-6);
}

.emotion-1:disabled:checked+[aria-hidden],
.emotion-1:disabled[data-indeterminate="true"]+[aria-hidden] {
  color: var(--pv-color-white);
}

.emotion-2 {
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  pointer-events: none;
}

<label
    class="emotion-0"
    for="test-id"
  >
    <input
      class="emotion-1"
      data-indeterminate="false"
      disabled=""
      id="test-id"
      type="checkbox"
    />
    <svg
      aria-hidden="true"
      class="emotion-2"
      fill="none"
      height="20px"
      viewBox="0 0 20 20"
      width="20px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m5 11 3 3 8-8"
        stroke="currentColor"
        stroke-width="1.5"
      />
    </svg>
  </label>
</DocumentFragment>
`;

exports[`<Checkbox /> Checkbox render variants should have className 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: var(--pv-size-base-4);
  height: var(--pv-size-base-4);
  position: relative;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-1 {
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  outline: 0;
  border-radius: 4px;
  border-width: 2px;
  border-style: solid;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  border-color: currentColor;
  background-color: transparent;
  color: var(--pv-color-gray-9);
}

.emotion-1:before {
  top: -7px;
  left: -7px;
  right: -7px;
  bottom: -7px;
  content: "";
  position: absolute;
  border-radius: 50%;
  opacity: 0;
  background-color: currentColor;
  -webkit-transition: opacity 200ms;
  transition: opacity 200ms;
}

.emotion-1:checked+[aria-hidden],
.emotion-1[data-indeterminate="true"]+[aria-hidden] {
  opacity: 1;
}

.emotion-1:not(:disabled) {
  cursor: pointer;
}

.emotion-1:not(:disabled):checked,
.emotion-1:not(:disabled)[data-indeterminate="true"] {
  color: var(--pv-color-primary-shade-1);
  background-color: var(--pv-color-primary);
}

.emotion-1:not(:disabled):checked+[aria-hidden],
.emotion-1:not(:disabled)[data-indeterminate="true"]+[aria-hidden] {
  color: var(--pv-color-white);
}

.emotion-1:not(:disabled):hover:before {
  opacity: 0.18;
}

.emotion-1:not(:disabled):focus-visible:before {
  opacity: 0.23;
}

.emotion-1:not(:disabled):active:before {
  opacity: 0.3;
}

.emotion-1:disabled {
  cursor: not-allowed;
  color: var(--pv-color-gray-6);
}

.emotion-1:disabled:checked,
.emotion-1:disabled[data-indeterminate="true"] {
  color: var(--pv-color-gray-7);
  background-color: var(--pv-color-gray-6);
}

.emotion-1:disabled:checked+[aria-hidden],
.emotion-1:disabled[data-indeterminate="true"]+[aria-hidden] {
  color: var(--pv-color-white);
}

.emotion-2 {
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  pointer-events: none;
}

<label
    class="test-cls emotion-0"
    for="test-id"
  >
    <input
      class="emotion-1"
      data-indeterminate="false"
      id="test-id"
      type="checkbox"
    />
    <svg
      aria-hidden="true"
      class="emotion-2"
      fill="none"
      height="20px"
      viewBox="0 0 20 20"
      width="20px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m5 11 3 3 8-8"
        stroke="currentColor"
        stroke-width="1.5"
      />
    </svg>
  </label>
</DocumentFragment>
`;

exports[`<Checkbox /> Checkbox render variants should have custom checked icon 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: var(--pv-size-base-4);
  height: var(--pv-size-base-4);
  position: relative;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-1 {
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  outline: 0;
  border-radius: 4px;
  border-width: 2px;
  border-style: solid;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  border-color: currentColor;
  background-color: transparent;
  color: var(--pv-color-gray-9);
}

.emotion-1:before {
  top: -7px;
  left: -7px;
  right: -7px;
  bottom: -7px;
  content: "";
  position: absolute;
  border-radius: 50%;
  opacity: 0;
  background-color: currentColor;
  -webkit-transition: opacity 200ms;
  transition: opacity 200ms;
}

.emotion-1:checked+[aria-hidden],
.emotion-1[data-indeterminate="true"]+[aria-hidden] {
  opacity: 1;
}

.emotion-1:not(:disabled) {
  cursor: pointer;
}

.emotion-1:not(:disabled):checked,
.emotion-1:not(:disabled)[data-indeterminate="true"] {
  color: var(--pv-color-primary-shade-1);
  background-color: var(--pv-color-primary);
}

.emotion-1:not(:disabled):checked+[aria-hidden],
.emotion-1:not(:disabled)[data-indeterminate="true"]+[aria-hidden] {
  color: var(--pv-color-white);
}

.emotion-1:not(:disabled):hover:before {
  opacity: 0.18;
}

.emotion-1:not(:disabled):focus-visible:before {
  opacity: 0.23;
}

.emotion-1:not(:disabled):active:before {
  opacity: 0.3;
}

.emotion-1:disabled {
  cursor: not-allowed;
  color: var(--pv-color-gray-6);
}

.emotion-1:disabled:checked,
.emotion-1:disabled[data-indeterminate="true"] {
  color: var(--pv-color-gray-7);
  background-color: var(--pv-color-gray-6);
}

.emotion-1:disabled:checked+[aria-hidden],
.emotion-1:disabled[data-indeterminate="true"]+[aria-hidden] {
  color: var(--pv-color-white);
}

.emotion-2 {
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  pointer-events: none;
}

<label
    class="emotion-0"
    for="test-id"
  >
    <input
      class="emotion-1"
      data-indeterminate="false"
      id="test-id"
      type="checkbox"
    />
    <svg
      aria-hidden="true"
      class="emotion-2"
      fill="none"
      height="24px"
      viewBox="0 0 24 24"
      width="24px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6 12.5h12M12 18.5v-12"
        stroke="currentColor"
        stroke-width="1.5"
      />
    </svg>
  </label>
</DocumentFragment>
`;

exports[`<Checkbox /> Checkbox render variants should have name attr 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: var(--pv-size-base-4);
  height: var(--pv-size-base-4);
  position: relative;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-1 {
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  outline: 0;
  border-radius: 4px;
  border-width: 2px;
  border-style: solid;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  border-color: currentColor;
  background-color: transparent;
  color: var(--pv-color-gray-9);
}

.emotion-1:before {
  top: -7px;
  left: -7px;
  right: -7px;
  bottom: -7px;
  content: "";
  position: absolute;
  border-radius: 50%;
  opacity: 0;
  background-color: currentColor;
  -webkit-transition: opacity 200ms;
  transition: opacity 200ms;
}

.emotion-1:checked+[aria-hidden],
.emotion-1[data-indeterminate="true"]+[aria-hidden] {
  opacity: 1;
}

.emotion-1:not(:disabled) {
  cursor: pointer;
}

.emotion-1:not(:disabled):checked,
.emotion-1:not(:disabled)[data-indeterminate="true"] {
  color: var(--pv-color-primary-shade-1);
  background-color: var(--pv-color-primary);
}

.emotion-1:not(:disabled):checked+[aria-hidden],
.emotion-1:not(:disabled)[data-indeterminate="true"]+[aria-hidden] {
  color: var(--pv-color-white);
}

.emotion-1:not(:disabled):hover:before {
  opacity: 0.18;
}

.emotion-1:not(:disabled):focus-visible:before {
  opacity: 0.23;
}

.emotion-1:not(:disabled):active:before {
  opacity: 0.3;
}

.emotion-1:disabled {
  cursor: not-allowed;
  color: var(--pv-color-gray-6);
}

.emotion-1:disabled:checked,
.emotion-1:disabled[data-indeterminate="true"] {
  color: var(--pv-color-gray-7);
  background-color: var(--pv-color-gray-6);
}

.emotion-1:disabled:checked+[aria-hidden],
.emotion-1:disabled[data-indeterminate="true"]+[aria-hidden] {
  color: var(--pv-color-white);
}

.emotion-2 {
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  pointer-events: none;
}

<label
    class="emotion-0"
    for="test-id"
  >
    <input
      class="emotion-1"
      data-indeterminate="false"
      id="test-id"
      name="test-name"
      type="checkbox"
    />
    <svg
      aria-hidden="true"
      class="emotion-2"
      fill="none"
      height="20px"
      viewBox="0 0 20 20"
      width="20px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m5 11 3 3 8-8"
        stroke="currentColor"
        stroke-width="1.5"
      />
    </svg>
  </label>
</DocumentFragment>
`;

exports[`<Checkbox /> Checkbox render variants should have required 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: var(--pv-size-base-4);
  height: var(--pv-size-base-4);
  position: relative;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-1 {
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  outline: 0;
  border-radius: 4px;
  border-width: 2px;
  border-style: solid;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  border-color: currentColor;
  background-color: transparent;
  color: var(--pv-color-gray-9);
}

.emotion-1:before {
  top: -7px;
  left: -7px;
  right: -7px;
  bottom: -7px;
  content: "";
  position: absolute;
  border-radius: 50%;
  opacity: 0;
  background-color: currentColor;
  -webkit-transition: opacity 200ms;
  transition: opacity 200ms;
}

.emotion-1:checked+[aria-hidden],
.emotion-1[data-indeterminate="true"]+[aria-hidden] {
  opacity: 1;
}

.emotion-1:not(:disabled) {
  cursor: pointer;
}

.emotion-1:not(:disabled):checked,
.emotion-1:not(:disabled)[data-indeterminate="true"] {
  color: var(--pv-color-primary-shade-1);
  background-color: var(--pv-color-primary);
}

.emotion-1:not(:disabled):checked+[aria-hidden],
.emotion-1:not(:disabled)[data-indeterminate="true"]+[aria-hidden] {
  color: var(--pv-color-white);
}

.emotion-1:not(:disabled):hover:before {
  opacity: 0.18;
}

.emotion-1:not(:disabled):focus-visible:before {
  opacity: 0.23;
}

.emotion-1:not(:disabled):active:before {
  opacity: 0.3;
}

.emotion-1:disabled {
  cursor: not-allowed;
  color: var(--pv-color-gray-6);
}

.emotion-1:disabled:checked,
.emotion-1:disabled[data-indeterminate="true"] {
  color: var(--pv-color-gray-7);
  background-color: var(--pv-color-gray-6);
}

.emotion-1:disabled:checked+[aria-hidden],
.emotion-1:disabled[data-indeterminate="true"]+[aria-hidden] {
  color: var(--pv-color-white);
}

.emotion-2 {
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  pointer-events: none;
}

<label
    class="emotion-0"
    for="test-id"
  >
    <input
      class="emotion-1"
      data-indeterminate="false"
      id="test-id"
      required=""
      type="checkbox"
    />
    <svg
      aria-hidden="true"
      class="emotion-2"
      fill="none"
      height="20px"
      viewBox="0 0 20 20"
      width="20px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m5 11 3 3 8-8"
        stroke="currentColor"
        stroke-width="1.5"
      />
    </svg>
  </label>
</DocumentFragment>
`;

exports[`<Checkbox /> Checkbox render variants should have test id 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: var(--pv-size-base-4);
  height: var(--pv-size-base-4);
  position: relative;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-1 {
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  outline: 0;
  border-radius: 4px;
  border-width: 2px;
  border-style: solid;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  border-color: currentColor;
  background-color: transparent;
  color: var(--pv-color-gray-9);
}

.emotion-1:before {
  top: -7px;
  left: -7px;
  right: -7px;
  bottom: -7px;
  content: "";
  position: absolute;
  border-radius: 50%;
  opacity: 0;
  background-color: currentColor;
  -webkit-transition: opacity 200ms;
  transition: opacity 200ms;
}

.emotion-1:checked+[aria-hidden],
.emotion-1[data-indeterminate="true"]+[aria-hidden] {
  opacity: 1;
}

.emotion-1:not(:disabled) {
  cursor: pointer;
}

.emotion-1:not(:disabled):checked,
.emotion-1:not(:disabled)[data-indeterminate="true"] {
  color: var(--pv-color-primary-shade-1);
  background-color: var(--pv-color-primary);
}

.emotion-1:not(:disabled):checked+[aria-hidden],
.emotion-1:not(:disabled)[data-indeterminate="true"]+[aria-hidden] {
  color: var(--pv-color-white);
}

.emotion-1:not(:disabled):hover:before {
  opacity: 0.18;
}

.emotion-1:not(:disabled):focus-visible:before {
  opacity: 0.23;
}

.emotion-1:not(:disabled):active:before {
  opacity: 0.3;
}

.emotion-1:disabled {
  cursor: not-allowed;
  color: var(--pv-color-gray-6);
}

.emotion-1:disabled:checked,
.emotion-1:disabled[data-indeterminate="true"] {
  color: var(--pv-color-gray-7);
  background-color: var(--pv-color-gray-6);
}

.emotion-1:disabled:checked+[aria-hidden],
.emotion-1:disabled[data-indeterminate="true"]+[aria-hidden] {
  color: var(--pv-color-white);
}

.emotion-2 {
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  pointer-events: none;
}

<label
    class="emotion-0"
    data-testid="test-id"
    for="test-id"
  >
    <input
      class="emotion-1"
      data-indeterminate="false"
      id="test-id"
      type="checkbox"
    />
    <svg
      aria-hidden="true"
      class="emotion-2"
      fill="none"
      height="20px"
      viewBox="0 0 20 20"
      width="20px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m5 11 3 3 8-8"
        stroke="currentColor"
        stroke-width="1.5"
      />
    </svg>
  </label>
</DocumentFragment>
`;

exports[`<Checkbox /> Checkbox render variants should render as default 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: var(--pv-size-base-4);
  height: var(--pv-size-base-4);
  position: relative;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-1 {
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  outline: 0;
  border-radius: 4px;
  border-width: 2px;
  border-style: solid;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  border-color: currentColor;
  background-color: transparent;
  color: var(--pv-color-gray-9);
}

.emotion-1:before {
  top: -7px;
  left: -7px;
  right: -7px;
  bottom: -7px;
  content: "";
  position: absolute;
  border-radius: 50%;
  opacity: 0;
  background-color: currentColor;
  -webkit-transition: opacity 200ms;
  transition: opacity 200ms;
}

.emotion-1:checked+[aria-hidden],
.emotion-1[data-indeterminate="true"]+[aria-hidden] {
  opacity: 1;
}

.emotion-1:not(:disabled) {
  cursor: pointer;
}

.emotion-1:not(:disabled):checked,
.emotion-1:not(:disabled)[data-indeterminate="true"] {
  color: var(--pv-color-primary-shade-1);
  background-color: var(--pv-color-primary);
}

.emotion-1:not(:disabled):checked+[aria-hidden],
.emotion-1:not(:disabled)[data-indeterminate="true"]+[aria-hidden] {
  color: var(--pv-color-white);
}

.emotion-1:not(:disabled):hover:before {
  opacity: 0.18;
}

.emotion-1:not(:disabled):focus-visible:before {
  opacity: 0.23;
}

.emotion-1:not(:disabled):active:before {
  opacity: 0.3;
}

.emotion-1:disabled {
  cursor: not-allowed;
  color: var(--pv-color-gray-6);
}

.emotion-1:disabled:checked,
.emotion-1:disabled[data-indeterminate="true"] {
  color: var(--pv-color-gray-7);
  background-color: var(--pv-color-gray-6);
}

.emotion-1:disabled:checked+[aria-hidden],
.emotion-1:disabled[data-indeterminate="true"]+[aria-hidden] {
  color: var(--pv-color-white);
}

.emotion-2 {
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  pointer-events: none;
}

<label
    class="emotion-0"
    for="test-id"
  >
    <input
      class="emotion-1"
      data-indeterminate="false"
      id="test-id"
      type="checkbox"
    />
    <svg
      aria-hidden="true"
      class="emotion-2"
      fill="none"
      height="20px"
      viewBox="0 0 20 20"
      width="20px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m5 11 3 3 8-8"
        stroke="currentColor"
        stroke-width="1.5"
      />
    </svg>
  </label>
</DocumentFragment>
`;
